# RaiseHack

./: .env.example  .gitignore  README.md  example_cmds.sh  instructions.md  pyproject.toml
.claude/: launch.json
home_agents/: .env.example  README.md  __init__.py  agent_runner.py  app.py  approvals.py  config.py  debug_log.py  google_action_planner.py  google_actions.py  llm_client.py  memory_store.py  models.py  orchestrator.py  requirements.txt  safety_monitor.py  scheduler.py  stream_registry.py  synthesis.py  task_store.py  telegram_bot.py  transcription.py
home_agents/frontend/: app.js  index.html  styles.css
tap_agent/: README.md  __init__.py  app.py  config.py  manager.py  memory.py  models.py  requirements.txt  specialists.py
