[project]
name = "home-agents"
version = "0.1.0"
description = "General multi-agent smart-home observation framework."
readme = "home_agents/README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.scripts]
home-agents = "home_agents.app:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["home_agents*"]
exclude = ["data*"]

[tool.uv]
package = true
